# auth1

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml  web.py
alembic/: env.py
alembic/versions/: 59a3de2001d8_rename_redirect_uris_to_allowed_hosts.py
auth1/: config.py  types.py
auth1/controllers/: auth_controller.py  oauth_controller.py
auth1/db/: connection.py  models.py  repositories.py
auth1/routers/: auth_router.py  oauth_router.py
auth1/services/: jwt_service.py  mailcow_provider.py
auth1/utils/: auth.py  validation.py
static/: signin.css  signin.html  signin.js
